@@ -18,6 +18,11 @@
 	display: none;
 }
 
+.h
+{
+	display: none;
+}
+
 .t
 {
 	cursor: pointer;
